[metadata]
name = msdss-models-api
version = 0.0.4
author = Richard Wen
author_email = rrwen.dev@gmail.com
description = Model management API for the Modular Spatial Decision Support Systems (MSDSS) framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rrwen/msdss-models-api
project_urls =
    Bug Tracker = https://github.com/rrwen/msdss-models-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == src
packages = find:
install_requires = 
    celery[redis]
    msdss-base-api
    msdss-base-database
    msdss-base-dotenv
    msdss-data-api
python_requires = >=3.8

[options.extras_require]
users-postgresql = msdss-users-api[postgresql]
users-mysql = msdss-users-api[mysql]
users-sqlite = msdss-users-api[sqlite]
postgresql = msdss-base-database[postgresql];msdss-data-api[postgresql]
mysql = msdss-base-database[mysql];msdss-data-api[mysql]
sqlite = msdss-base-database[sqlite];msdss-data-api[sqlite]

[options.packages.find]
where = src